# ruptrk-cli

./: CHANGELOG.MD  LICENSE  README.md  pyproject.toml  setup.py
ruptrk_cli/: __init__.py  cli.py  config.py  db.py  reports.py  sales.py  stocks.py
